Adding JSON Schema support
- integrated with SR (KafkaJsonSchemaSerializer)
- added configurable topic parameters - name, partitions, replicas
- small addons (escapehtml, parsing tags)
- added doc consuming data with schema

--- a/ws-to-kafka/src/main/resources/application.properties
+++ b/ws-to-kafka/src/main/resources/application.properties
@@ -1,17 +1,15 @@
 spring.main.web-application-type=none
 
-# Kafka
-# CCloud
-spring.kafka.properties.ssl.endpoint.identification.algorithm=https
-spring.kafka.properties.sasl.mechanism=PLAIN
-spring.kafka.properties.request.timeout.ms=20000
-spring.kafka.properties.bootstrap.servers=${BOOTSTRAP_SERVERS}
-spring.kafka.properties.retry.backoff.ms=500
-spring.kafka.properties.sasl.jaas.config=${SASL_JAAS_CONFIG_PROPERTY_FORMAT}
-spring.kafka.properties.security.protocol=SASL_SSL
-spring.kafka.streams.replication-factor=3
+spring.profiles.active=local
 
-# Confluent Cloud Schema Registry
-#spring.kafka.properties.basic.auth.credentials.source=USER_INFO
-#spring.kafka.properties.schema.registry.basic.auth.user.info={{ SR_API_KEY }}:{{ SR_API_SECRET }}
-#spring.kafka.properties.schema.registry.url=
+# common application config
+serverless.kotlin.kafka.so-to-ws.url=wss://stackoverflow-to-ws-u7lmfx4izq-uc.a.run.app/questions
+serverless.kotlin.kafka.mytopic.name=mytopic
+
+# common producer config
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.json.KafkaJsonSchemaSerializer
+
+#spring.kafka.producer.properties.json.oneof.for.nullables=false
+#spring.kafka.producer.properties.json.schema.spec.version=draft_7
+
