--- a/ws-to-kafka/src/main/resources/application.properties
+++ b/ws-to-kafka/src/main/resources/application.properties
@@ -1,14 +1,29 @@
 spring.main.web-application-type=none
 
-spring.profiles.active=local
-
-# common application config
+# kafka application config
 serverless.kotlin.kafka.so-to-ws.url=wss://stackoverflow-to-ws-u7lmfx4izq-uc.a.run.app/questions
 serverless.kotlin.kafka.mytopic.name=mytopic
+serverless.kotlin.kafka.mytopic.replicas=1
+serverless.kotlin.kafka.mytopic.partitions=8
 
-# common producer config
+# kafka producer config
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.json.KafkaJsonSchemaSerializer
+
+# kafka connection config
+spring.kafka.properties.ssl.endpoint.identification.algorithm=https
+spring.kafka.properties.sasl.mechanism=PLAIN
+spring.kafka.properties.request.timeout.ms=20000
+spring.kafka.properties.bootstrap.servers=${BOOTSTRAP_SERVERS}
+spring.kafka.properties.retry.backoff.ms=500
+spring.kafka.properties.sasl.jaas.config=${SASL_JAAS_CONFIG_PROPERTY_FORMAT}
+spring.kafka.properties.security.protocol=SASL_SSL
+spring.kafka.streams.replication-factor=3
+
+# schema registry config
+spring.kafka.properties.basic.auth.credentials.source=USER_INFO
+spring.kafka.properties.schema.registry.basic.auth.user.info=${SCHEMA_REGISTRY_BASIC_AUTH_USER_INFO}
+spring.kafka.properties.schema.registry.url=${SCHEMA_REGISTRY_URL}
 
 #spring.kafka.producer.properties.json.oneof.for.nullables=false
 #spring.kafka.producer.properties.json.schema.spec.version=draft_7
