--- a/ws-to-kafka/src/main/resources/application.properties
+++ b/ws-to-kafka/src/main/resources/application.properties
@@ -16,13 +16,13 @@ spring.kafka.properties.sasl.mechanism=PLAIN
 spring.kafka.properties.request.timeout.ms=20000
 spring.kafka.properties.bootstrap.servers=${BOOTSTRAP_SERVERS}
 spring.kafka.properties.retry.backoff.ms=500
-spring.kafka.properties.sasl.jaas.config=${SASL_JAAS_CONFIG_PROPERTY_FORMAT}
+spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username='${CCLOUD_KEY}' password='${CCLOUD_PASSWORD}';
 spring.kafka.properties.security.protocol=SASL_SSL
 spring.kafka.streams.replication-factor=3
 
 # schema registry config
 spring.kafka.properties.basic.auth.credentials.source=USER_INFO
-spring.kafka.properties.schema.registry.basic.auth.user.info=${SCHEMA_REGISTRY_BASIC_AUTH_USER_INFO}
+spring.kafka.properties.schema.registry.basic.auth.user.info=${SCHEMA_REGISTRY_KEY}:${SCHEMA_REGISTRY_PASSWORD}
 spring.kafka.properties.schema.registry.url=${SCHEMA_REGISTRY_URL}
 
 #spring.kafka.producer.properties.json.oneof.for.nullables=false
