dockerize and config change

--- a/ws-to-kafka/src/main/resources/application.properties
+++ b/ws-to-kafka/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.json.Kafka
 # kafka connection config
 spring.kafka.properties.ssl.endpoint.identification.algorithm=https
 spring.kafka.properties.sasl.mechanism=PLAIN
-spring.kafka.properties.bootstrap.servers=${BOOTSTRAP_SERVERS}
-spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username='${CCLOUD_KEY}' password='${CCLOUD_PASSWORD}';
+spring.kafka.properties.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVERS}
+spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username='${KAFKA_USERNAME}' password='${KAFKA_PASSWORD}';
 spring.kafka.properties.security.protocol=SASL_SSL
 
 # schema registry config
