--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -7,4 +7,4 @@ deploy:
     manifests:
       - ws-to-kafka-app-secret.yaml
       - ws-to-kafka-app-deployment.yaml
-      # - ksqldb-setup-deployment.yaml
+      - ksqldb-setup-deployment.yaml
